--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.5",
+    "@heroicons/react": "^1.0.6",
+    "@paypal/react-paypal-js": "^7.8.1",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.4.1",
     "next": "12.1.6",
+    "next-auth": "^4.7.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.0",
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
+    "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
